Attempting to fix the footer to the bottom of the page on mobile

--- a/ATM.css
+++ b/ATM.css
@@ -97,6 +97,7 @@ button{
 }
 .footer{
 	background-color:grey;
+	bottom:0;
 
 }
 #slides {
